# Blender-Mcp-Server

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BLENDER_ADDON_INSTALL.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  GITHUB_SETUP_GUIDE.md  INSTALLATION_CHECKLIST.md  LICENSE  QUICKSTART_WINDOWS11.md  README.md  SECURITY.md  WINDOWS11_SETUP_GUIDE.md  install.sh  mcp-server.json  package-for-distribution.bat  pyproject.toml  requirements.txt  run.sh  start-windows-ps1.ps1  start-windows.bat  start.sh  test-windows-setup.bat  validate_implementation.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
blender_addon/: __init__.py
docs/: api_reference.md
examples/: usage_examples.py
src/blender_mcp_server/: __init__.py  server.py  simple_server.py
tests/: test_blender_mcp_server.py
